--- a/form.html
+++ b/form.html
@@ -40,9 +40,12 @@
   form.addEventListener('submit', e => {
     e.preventDefault()
     fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-      .then(response => console.log('Success!', response))
+      .then(response => {console.log('Success!', response);
+     window.location.href = "payment.html";})
       .catch(error => console.error('Error!', error.message))
   })
 </script>
+
+
 </body>
 </html>
