--- a/form.html
+++ b/form.html
@@ -12,6 +12,9 @@
     body{
       background-color: rgb(255, 255, 255);
     }
+    *{
+      overflow-x: hidden;
+    }
   </style>
   
 <div class="form-box">
