--- a/payment.html
+++ b/payment.html
@@ -16,5 +16,8 @@
   <!-- Back Button -->
   <br>
   <button class="pm" onclick="window.location.href='index.html'">Scan to Pay Rs.99</button>
+  <div class="ko">
+    <p>"After payment, your eBook will be sent to your email within minutes."</p>
+  </div>
 </body>
 </html>
