--- a/payment.html
+++ b/payment.html
@@ -7,12 +7,17 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Scan to Pay</h1>
+  <style>
+    *{
+      overflow-x: hidden;
+    }
+  </style>
+  <div class="mpp">
   <p>Use any UPI app (GPay, PhonePe, Paytm) to scan and pay</p>
-
+  </div>
   <!-- Your QR Code -->
   <img class="anshul" src="WhatsApp Image 2025-09-12 at 21.12.13_e3408d39.jpg" alt="UPI QR Code">
-<h1 class="kk">SCAN HERE</h1>
+<h1 class="kk">Scan and Pay</h1>
   <!-- Back Button -->
   <br>
   <button class="pm" onclick="window.location.href='index.html'">Scan to Pay Rs.99</button>
