--- a/payment.html
+++ b/payment.html
@@ -22,7 +22,7 @@
   <br>
   <button class="pm" onclick="window.location.href='index.html'">Scan to Pay Rs.99</button>
   <div class="ko">
-    <p>"After payment, your eBook will be sent to your email within minutes."</p>
+    <p>"After payment, your eBook will be sent<br>to your email within minutes."</p>
   </div>
 </body>
 </html>
